--- a/examples/methods/my_config.yaml
+++ b/examples/methods/my_config.yaml
@@ -1,14 +1,15 @@
 # ------------------------------------------------Global Paths------------------------------------------------#
 # Paths to models
 model2path:
-  e5: "intfloat/e5-base-v2"
+  e5: "/workspace/embeddings/e5-base-v2"
   bge: "BAAI/bge-base-en-v1.5"
   contriever: "facebook/contriever"
   llama2-7B-chat: "meta-llama/Llama-2-7b-chat-hf"
   llama2-7B: "meta-llama/Llama-2-7b-hf"
-  llama2-13B: "meta-llama/Llama-2-13b-hf"
+  llama2-13B: "/workspace/models/Llama-2-13b-hf"
   llama2-13B-chat: "meta-llama/Llama-2-13b-chat-hf"
-  llama3-8B-instruct: "meta-llama/Meta-Llama-3-8B-Instruct"
+  llama3-8B-instruct: "/workspace/models/Meta-Llama-3-8B-Instruct"
+  gpt2: "/workspace/models/gpt2"
 
 # Pooling methods for each embedding model
 model2pooling:
@@ -20,18 +21,18 @@ model2pooling:
 
 # Indexes path for retrieval models
 method2index:
-  e5: ~
+  e5: /workspace/indexes/flashrag_wiki/len200/e5_Flat_1M.index
   bm25: ~
   contriever: ~
 
 # ------------------------------------------------Environment Settings------------------------------------------------#
 # Directory paths for data and outputs
-data_dir: "dataset/"
+data_dir: "/workspace/datasets/myOwn_datasets"
 save_dir: "output/"
 
 gpu_id: "0,1,2,3"
-dataset_name: "nq" # name of the dataset in data_dir
-split: [ "test" ]  # dataset split to load (e.g. train,dev,test)
+dataset_name: "bbq" # name of the dataset in data_dir
+split: [ "bbq_gender_50" ]  # dataset split to load (e.g. train,dev,test)
 
 # Sampling configurations for testing
 test_sample_num: ~  # number of samples to test (only work in dev/test split), if None, test all samples
@@ -48,8 +49,8 @@ save_note: 'experiment'
 # If set the name, the model path will be find in global paths
 retrieval_method: "e5"  # name or path of the retrieval model. 
 index_path: ~ # set automatically if not provided. 
-faiss_gpu: False # whether use gpu to hold index
-corpus_path: ~  # path to corpus in '.jsonl' format that store the documents
+faiss_gpu: True # whether use gpu to hold index
+corpus_path: /workspace/corpus/flashrag_wiki/wiki_dump_1M.jsonl  # path to corpus in '.jsonl' format that store the documents
 
 retrieval_topk: 5 # number of retrieved documents
 retrieval_batch_size: 256  # batch size for retrieval
@@ -73,12 +74,12 @@ rerank_use_fp16: True
 framework: vllm # inference frame work of LLM, supporting: 'hf','vllm','fschat'
 generator_model: "llama3-8B-instruct" # name or path of the generator model
 generator_max_input_len: 2048  # max length of the input
-generator_batch_size: 2 # batch size for generation, invalid for vllm
+generator_batch_size: 32 # batch size for generation, invalid for vllm
 generation_params:
   do_sample: False
   max_tokens: 32
 use_fid: False # whether to use FID, only valid in encoder-decoder model
-
+# gpu_memory_utilization: 0.5 # ratio of gpu's memory usage for generator
 
 # -------------------------------------------------Refiner Settings------------------------------------------------#
 # If set, the refiner will be used to refine the retrieval documents.
@@ -107,7 +108,7 @@ sc_config:
 
 # -------------------------------------------------Evaluation Settings------------------------------------------------#
 # Metrics to evaluate the result
-metrics: [ 'em','f1','acc','precision','recall']
+metrics: [ 'em','f1','acc','precision','recall', 'uhp']
 # Specify setting for metric, will be called within certain metrics
 metric_setting:
   retrieval_recall_topk: 5
